# Dispatcharrv2

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Plugin_repo.md  Plugins.md  README.md  debian_install.sh  fixtures.json  pyproject.toml  version.py
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: base-image.yml  ci.yml  docker-build.yml  frontend-tests.yml  release.yml
apps/accounts/: api_views.py  authentication.py  models.py  serializers.py
apps/backups/: api_views.py  apps.py  services.py  tests.py
apps/channels/: api_views.py  models.py  serializers.py  signals.py  tasks.py
apps/connect/: api_views.py
apps/epg/: api_urls.py  api_views.py  models.py  serializers.py  tasks.py  utils.py
apps/hdhr/: api_views.py  views.py
apps/m3u/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  signals.py  (+2 more)
core/: api_urls.py  api_views.py  apps.py  models.py  redis_pubsub.py  serializers.py  signals.py  tasks.py  tests.py  utils.py  views.py  xtream_codes.py
dispatcharr/: app_initialization.py  celery.py  consumers.py  persistent_lock.py  settings.py  urls.py  utils.py
docker/: DispatcharrBase  Dockerfile  build-dev.sh  comskip.ini  docker-compose.aio.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.celery.sh  entrypoint.sh  nginx.conf  uwsgi.debug.ini  uwsgi.dev.ini  uwsgi.ini  uwsgi.modular.ini
frontend/: index.html  prettier.config.js  vite.config.js
scripts/: update_changelog.py  wait_for_redis.py
tests/: test_user_preferences.py  test_wait_for_redis.py
(+362 files in other folders)
